[gd_scene load_steps=3 format=3 uid="uid://8a1qea0ivifp"]

[ext_resource type="PackedScene" uid="uid://dejk6fuga3ldo" path="res://addons/card_engine/editor/ability_script_panel.tscn" id="1_lx2dw"]
[ext_resource type="Script" path="res://addons/card_engine/editor/ability_script_panel_condition.gd" id="2_fr5a0"]

[node name="AbilityScriptPanel" instance=ExtResource("1_lx2dw")]
script = ExtResource("2_fr5a0")

[node name="MoveDownButton" type="Button" parent="HBoxContainer" index="7"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "↓"

[node name="MoveUpButton" type="Button" parent="HBoxContainer" index="8"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "↑"

[connection signal="pressed" from="HBoxContainer/MoveDownButton" to="." method="_on_move_down_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MoveUpButton" to="." method="_on_move_up_button_pressed"]
